# briefcase-android-gradle-template

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  cookiecutter.json  create_sample_app.sh  generate.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: test_template_rendering.py
tests/apps/verify-toga/: pyproject.toml
{{ cookiecutter.formal_name }}/: .gitignore  briefcase.toml  build.gradle  gradle.properties  settings.gradle
{{ cookiecutter.formal_name }}/app/: build.gradle
{{ cookiecutter.formal_name }}/app/src/main/: AndroidManifest.xml
{{ cookiecutter.formal_name }}/app/src/main/cpp/: CMakeLists.txt
{{ cookiecutter.formal_name }}/gradle/wrapper/: gradle-wrapper.properties
{{ cookiecutter.format }}/: .gitignore  briefcase.toml  build.gradle  gradle.properties  settings.gradle
{{ cookiecutter.format }}/app/: build.gradle  pip-options.txt
{{ cookiecutter.format }}/app/src/main/: AndroidManifest.xml
{{ cookiecutter.format }}/gradle/wrapper/: gradle-wrapper.properties
{{ cookiecutter.safe_formal_name }}/: briefcase.toml  build.gradle
{{ cookiecutter.safe_formal_name }}/app/: build.gradle
{{ cookiecutter.safe_formal_name }}/app/src/main/: AndroidManifest.xml
{{ cookiecutter.safe_formal_name }}/gradle/wrapper/: gradle-wrapper.properties
{{cookiecutter.formal_name}}/: briefcase.toml  gradle.properties  run.sh
{{cookiecutter.formal_name}}/app/: build.gradle
{{cookiecutter.project_name}}/: .gitignore  settings.gradle
{{cookiecutter.project_name}}/app/: build.gradle
(+37 files in other folders)
